force-app/main/default/objects/LiveChatTranscript/fields/ALAN_DH_CCR_Description__c.field-meta.xml
<CustomField>
    <fullName>ALAN_DH_CCR_Description__c</fullName>
    <label>ALAN DH CCR Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>