force-app/main/default/objects/LiveChatTranscript/fields/ALAN_DH_CCR_ID__c.field-meta.xml
<CustomField>
    <fullName>ALAN_DH_CCR_ID__c</fullName>
    <label>ALAN DH CCR ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>