force-app/main/default/objects/LiveChatTranscript/fields/ALAN_Entity_CCR_ID_Description__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Entity_CCR_ID_Description__c</fullName>
    <label>ALAN Entity CCR ID Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>