force-app/main/default/objects/LiveChatTranscript/fields/ALAN_Entity_User_ID__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Entity_User_ID__c</fullName>
    <label>ALAN Entity User ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>