force-app/main/default/objects/LiveChatTranscript/fields/ALAN_Flow_Version__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Flow_Version__c</fullName>
    <label>ALAN Flow Version</label>
    <length>225</length>
    <type>Text</type>
</CustomField>