force-app/main/default/objects/LiveChatTranscript/fields/ALAN_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Language_Code__c</fullName>
    <label>ALAN Language Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>