force-app/main/default/objects/LiveChatTranscript/fields/ALAN_Last_Message_Date__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Last_Message_Date__c</fullName>
    <label>ALAN Last Message Date</label>
    <length>225</length>
    <type>Text</type>
</CustomField>