force-app/main/default/objects/LiveChatTranscript/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DHAU</fullName>
            </value>
            <value>
                <fullName>SE_OnlinePizza</fullName>
            </value>
            <value>
                <fullName>Yogiyo</fullName>
            </value>
            <value>
                <fullName>FI_PizzaOnline</fullName>
            </value>
            <value>
                <fullName>DE_Lieferheld</fullName>
            </value>
            <value>
                <fullName>DE_Pizza.de</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>