force-app/main/default/objects/LiveChatTranscript/fields/Case_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Id_Formula__c</fullName>
    <description>This field is used to control the Set Case Reason component visibility.</description>
    <formula>Case.Id</formula>
    <label>Case Id Formula</label>
    <type>Text</type>
</CustomField>