force-app/main/default/objects/LiveChatTranscript/fields/Case_Reason_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Level_1__c</fullName>
    <label>Case Reason Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer inquiry before order placement</fullName>
            </value>
            <value>
                <fullName>Live order process inquiry by customer</fullName>
            </value>
            <value>
                <fullName>Customer complaints or negative feedback</fullName>
            </value>
            <value>
                <fullName>Other customer inquiries or feedback</fullName>
            </value>
            <value>
                <fullName>Technical problems &amp; questions</fullName>
            </value>
            <value>
                <fullName>Restaurant data update</fullName>
            </value>
            <value>
                <fullName>Content update</fullName>
            </value>
            <value>
                <fullName>Activation or deactivation of restaurant</fullName>
            </value>
            <value>
                <fullName>Customer evaluations inquiry</fullName>
            </value>
            <value>
                <fullName>Finance inquiry by restaurant</fullName>
            </value>
            <value>
                <fullName>Sales inquiry by restaurant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other restaurant inquiries or feedback</fullName>
            </value>
            <value>
                <fullName>Live order process inquiry by restaurant</fullName>
            </value>
            <value>
                <fullName>Live Order Process</fullName>
            </value>
            <value>
                <fullName>Across Journey</fullName>
            </value>
            <value>
                <fullName>Post-Delivery</fullName>
            </value>
            <value>
                <fullName>Partner data update</fullName>
            </value>
            <value>
                <fullName>Technical Inquiry</fullName>
            </value>
            <value>
                <fullName>Live order inquiries by restaurant</fullName>
            </value>
            <value>
                <fullName>Billing inquiries</fullName>
            </value>
            <value>
                <fullName>Contract and Sales inquiries</fullName>
            </value>
            <value>
                <fullName>Partner Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>