force-app/main/default/objects/LiveChatTranscript/fields/Case_Reason_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Level_2__c</fullName>
    <label>Case Reason Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_Level_1__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>9Cookies</fullName>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Cancellation by restaurant</fullName>
            </value>
            <value>
                <fullName>Cancellation of order by customer</fullName>
            </value>
            <value>
                <fullName>Changes to restaurant profile</fullName>
            </value>
            <value>
                <fullName>Change to order</fullName>
            </value>
            <value>
                <fullName>Contactless delivery</fullName>
            </value>
            <value>
                <fullName>Customer account</fullName>
            </value>
            <value>
                <fullName>Customer evaluations</fullName>
            </value>
            <value>
                <fullName>Customer service complaint</fullName>
            </value>
            <value>
                <fullName>Deals update</fullName>
            </value>
            <value>
                <fullName>Delivery changes</fullName>
            </value>
            <value>
                <fullName>Delivery complaint</fullName>
            </value>
            <value>
                <fullName>Delivery Inquiry</fullName>
            </value>
            <value>
                <fullName>Food complaint</fullName>
            </value>
            <value>
                <fullName>Frontend issue</fullName>
            </value>
            <value>
                <fullName>General customer complaint</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Imagery Update</fullName>
            </value>
            <value>
                <fullName>Interested new restaurant</fullName>
            </value>
            <value>
                <fullName>Invoice inquiry</fullName>
            </value>
            <value>
                <fullName>Irrelevant</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing inquiry</fullName>
            </value>
            <value>
                <fullName>Menu change</fullName>
            </value>
            <value>
                <fullName>Missing order information</fullName>
            </value>
            <value>
                <fullName>Order payment complaint</fullName>
            </value>
            <value>
                <fullName>Order process complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>