force-app/main/default/objects/LiveChatTranscript/fields/Case_Reason_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Level_3__c</fullName>
    <label>Case Reason Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_Level_2__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account management feedback on exisiting issue required</fullName>
            </value>
            <value>
                <fullName>Account management meeting request</fullName>
            </value>
            <value>
                <fullName>App complaint by customer</fullName>
            </value>
            <value>
                <fullName>App issue</fullName>
            </value>
            <value>
                <fullName>App problem ‒ 9Cookies</fullName>
            </value>
            <value>
                <fullName>Bank account details change</fullName>
            </value>
            <value>
                <fullName>Branded material request</fullName>
            </value>
            <value>
                <fullName>Calculation mistakes in invoice</fullName>
            </value>
            <value>
                <fullName>Category hide or unhide</fullName>
            </value>
            <value>
                <fullName>Change of mind</fullName>
            </value>
            <value>
                <fullName>Change of owner</fullName>
            </value>
            <value>
                <fullName>Changes in delivery fee</fullName>
            </value>
            <value>
                <fullName>Changes in minimum order value</fullName>
            </value>
            <value>
                <fullName>Choices or toppings update</fullName>
            </value>
            <value>
                <fullName>Close restaurant temporarily</fullName>
            </value>
            <value>
                <fullName>Closing of restaurant</fullName>
            </value>
            <value>
                <fullName>Confirmation time too long</fullName>
            </value>
            <value>
                <fullName>Connection problem ‒ Box</fullName>
            </value>
            <value>
                <fullName>Contactless delivery feature inquiry</fullName>
            </value>
            <value>
                <fullName>Customer account deletion</fullName>
            </value>
            <value>
                <fullName>Customer address problem</fullName>
            </value>
            <value>
                <fullName>Customer email address change</fullName>
            </value>
            <value>
                <fullName>Customer information missing</fullName>
            </value>
            <value>
                <fullName>Customer not at delivery address</fullName>
            </value>
            <value>
                <fullName>Customer outside of delivery area</fullName>
            </value>
            <value>
                <fullName>Customer phone number problem</fullName>
            </value>
            <value>
                <fullName>Data protection inquiry</fullName>
            </value>
            <value>
                <fullName>Deal addition or removal</fullName>
            </value>
            <value>
                <fullName>Deal extension or change</fullName>
            </value>
            <value>
                <fullName>Delay in order delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>