force-app/main/default/objects/LiveChatTranscript/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>TEXT(Case.Type)</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>