force-app/main/default/objects/LiveChatTranscript/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>To capture the description of the chat message.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>