force-app/main/default/objects/LiveChatTranscript/fields/My_Problem__c.field-meta.xml
<CustomField>
    <fullName>My_Problem__c</fullName>
    <label>My Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>