force-app/main/default/objects/LiveChatTranscript/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This field was created to show the source of the chat. Created as part of SP-4634</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>