force-app/main/default/objects/LiveChatTranscript/fields/Request_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Start_Time__c</fullName>
    <formula>VALUE(MID(TEXT( RequestTime + 1/24),12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request_Start_Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>