force-app/main/default/objects/LiveChatTranscript/fields/Restaurant_Address__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Address__c</fullName>
    <label>Restaurant Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>