force-app/main/default/objects/LiveChatTranscript/fields/Restaurant_ID__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_ID__c</fullName>
    <label>Restaurant ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>