force-app/main/default/objects/LiveChatTranscript/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <label>Restaurant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>