force-app/main/default/objects/LiveChatTranscript/fields/Restaurant_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Postcode__c</fullName>
    <label>Restaurant Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>