force-app/main/default/objects/LiveChatTranscript/fields/Start_Time_h__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_h__c</fullName>
    <formula>HOUR(TIMEVALUE(StartTime + 1/24))</formula>
    <label>Start Time (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>