force-app/main/default/objects/LiveChatTranscript/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>To capture subject line of the Chat message</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>