force-app/main/default/objects/LiveChatTranscript/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>