force-app/main/default/objects/LiveChatTranscript/listViews/AT_Chats_Escalation_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>AT_Chats_Escalation_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>AT - Chats Escalation</label>
    <queue>AT_Chats_Escalation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>