force-app/main/default/objects/LiveChatTranscript/listViews/AU_Chat_Transcripts.listView-meta.xml
<ListView>
    <fullName>AU_Chat_Transcripts</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Survey__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skill</field>
        <operation>equals</operation>
        <value>AU Skills</value>
    </filters>
    <label>AU Chat Transcripts</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>