force-app/main/default/objects/LiveChatTranscript/listViews/CD_Chats_Customer_VIP_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CD_Chats_Customer_VIP_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CD - Chats Customer VIP</label>
    <queue>CD_Chats_Customer_VIP</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>