force-app/main/default/objects/LiveChatTranscript/listViews/CD_Chats_Restaurant_Escalation_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CD_Chats_Restaurant_Escalation_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CD - Chats Restaurant Escalation</label>
    <queue>CD_Chats_Restaurant_Escalation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>