force-app/main/default/objects/LiveChatTranscript/listViews/CD_Chats_Restaurant_Urgent_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CD_Chats_Restaurant_Urgent_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CD - Chats Restaurant Urgent</label>
    <queue>CD_Chats_Restaurant_Urgent</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>