force-app/main/default/objects/LiveChatTranscript/listViews/CD_Live_Agent_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CD_Live_Agent_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>CD - Live Agent [DELETE]</label>
    <queue>CD_Live_Agent</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>