force-app/main/default/objects/LiveChatTranscript/listViews/CZ_CS_Czech_Chats_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>CZ_CS_Czech_Chats_LiveChatTranscript</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>CZ CS Czech Chats</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>