force-app/main/default/objects/LiveChatTranscript/listViews/DE_Chat_Escalation_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>DE_Chat_Escalation_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>DE - Chat Escalation</label>
    <queue>DE_Chat_Escalation</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>